text-overflow fixed

--- a/frontend/src/app/chat/chat-room-page/message-list/message-list.component.scss
+++ b/frontend/src/app/chat/chat-room-page/message-list/message-list.component.scss
@@ -207,6 +207,13 @@
   &.own {
     justify-content: flex-end;
   }
+
+  .reply-text {
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 
 .avatar-wrapper {
